# Wash

./: .gitignore  CMakeLists.txt  README.md
src/: builtin.c  shell.c
src/include/: builtin.h  global.h
